dataset1235/2025-2/2318198438/users/1324664027/executions/2601575092_1964285824.log
== RUN (2025-08-12 00:45:13)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 8%10)

print("Potenciacao: ", 2^3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:44:53)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 8888%10)

print("Potenciacao: ", 2^3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:45:42)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 8%10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:45:03)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 88%10)

print("Potenciacao: ", 2^3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:44:37)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 80%10)

print("Potenciacao: ", 2^3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:44:18)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 80%10)

print("Potenciacao: ", 2³)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:45:00)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 888%10)

print("Potenciacao: ", 2^3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:42:26)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", ...)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:43:49)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 80%10)

print("Potenciacao: ", 2³)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:45:20)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 8%10)

print("Potenciacao: ", 2³)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 00:46:46)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 8%10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
